[package]
name = "P2PVPNClient"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
hex = "0.4.3" 
tokio = { version = "1", features = ["full"] }
dialoguer = "0.11.0"
wiretun = "0.5.0"
wireguard-tools-rs = "0.1.0"

[dependencies.async-std]
version = "1.10"
features = ["attributes"]

[build-dependencies]
# Required for building dialoguer on Windows
cmake = "0.1.50"

